# junk_yard

./: .gitignore  Pluto.txt  README.md  What Makes Dynamic Languages Dynamic  a.out.js  add.wat.wasm  astro_by_example.astro  astro_config.astro  astro_julia.jl  astro_syntax_test.astro  bb.sim  compare.astro  compiler.astro  conf_nova.astro  day03.astro  day03.nim  day05.astro  day05.nim  deallocation0.1.astro  dev.ast  error_handling.astro  folder_structure.astro  hello.js  index.js  index.wasm  julia.astro  mac_hello.nasm  main.rs  maths_in_astro.astro  meta.astro  nova.conf  parser0.1.astro  prime.astro  print-em.js  print.js  print.wasm  quine.astro  sdl.js  sdl.wasm  string_implementation.astro  (+14 more)
assembly/: Makefile  linux_hello.nasm  printf  printf.nasm  sample.nasm  test.nasm
astro/: astro-rc.astro  astro_julia.astro  astro_snippets.astro  conf_nova.astro  deallocation.astro  error_handling.astro  exceptions_and_errors.astro  functional_astro.astro  grammar.astro  proportion.astro  random.astro  string_implementation.astro  type_annotation.grammar
c/: args.c  ctypes_example.c  exit.c  exploits.c  libctypes_example.dylib  local.c  module1.c  pthread.c  read_file.c  read_win.cpp  recursive.c  server-wasm.c  server.c  syscalls.rs  test.c
candle/cuda/: Cargo.toml
flask-test/: Pipfile  test.py
nim/: day04.nim  main  main.nim  test.nim
tch_rs/mps/: Cargo.toml
tch_rs/mps/src/: init_on_device.rs  layer_on_device.rs  mat_to_device.rs  sparse.rs  sparse_f16.rs  vs.rs
wasmtime/wasi_file/: Cargo.toml
wasmtime/wasi_file/src/: wasi_file_alloc.rs  wasi_file_args.rs
(+133 files in other folders)
